# dart-mcp

./: .gitignore  DEPLOY.md  README.md  main.py  pyproject.toml  requirements.txt  run_mcp.py  run_server.bat  vercel.json
api/: index.py
docs/: opendart-api-reference.md
scripts/: update_companies.py
src/opendart_mcp/: __init__.py  client.py  exceptions.py  rate_limiter.py  server.py
src/opendart_mcp/api/: __init__.py  disclosure.py  financial.py  report.py
src/opendart_mcp/models/: __init__.py  ds001.py  ds002.py  ds003.py
tests/: __init__.py  test_client.py  test_ds001_api.py  test_ds002_api.py  test_ds003_api.py  test_e2e.py  test_exceptions.py  test_mcp_server.py  test_rate_limiter.py
