[project]
name = "opendart-mcp"
version = "0.1.0"
description = "OpenDART API MCP Server - Korean FSS Electronic Disclosure API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "pydantic>=2.12.5",
]

[project.scripts]
opendart-mcp = "opendart_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
