[project]
name = "opendart-mcp"
version = "0.2.0"
description = "OpenDART API MCP Server - Korean FSS Electronic Disclosure API (Streamable HTTP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.34.0",
    "starlette>=0.45.0",
]

[project.scripts]
opendart-mcp = "opendart_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendart_mcp"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
